iconplusTest/k8s/monitoring/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: devops
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter:v1.8.1
          ports:
            - containerPort: 9100
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: devops
spec:
  clusterIP: None
  selector:
    app: node-exporter
  ports:
    - port: 9100
      targetPort: 9100
      name: metrics
