iconplusTest/k8s/monitoring/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
    - host: monitor.local
      http:
        paths:
          - path: /prometheus/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
          - path: /grafana/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana-service
                port:
                  number: 3001
